--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -41,3 +41,6 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "panelLogin/panelLogin"
 @import "panelRegister/panelRegister"
 @import "panelResetPassword/panelResetPassword"
+
+@import "panelList/panelList"
+@import "panelAutobusy/panelAutobusy"
