--- a/szablon/jade/_header.jade
+++ b/szablon/jade/_header.jade
@@ -66,3 +66,6 @@
           span.headerProfile__buttonIconBG
             .headerProfile__buttonIcon.fa.fa-sign-out
           | Wyloguj
+
+.headerUserPanel
+  span Zalogowany: nazwaUzytkownika@cmok.pl
