--- a/szablon/blocks/header/_header.sass
+++ b/szablon/blocks/header/_header.sass
@@ -16,6 +16,9 @@
     &:hover
       transition: opacity 0.36s ease
       opacity: 1
+    +PHONE_ONLY
+      left: 0
+      right: 100%
 
   &__switcher
     transition: transform 0.36s ease, background 0.8s ease
@@ -136,3 +139,38 @@
   &__buttonIcon
     font-size: 3em
     line-height: 80px
+
+.headerUserPanel
+  position: absolute
+  max-width: 250px
+  width: 100%
+  height: 38px
+  top: 4px
+  right: 50px
+  z-index: 103
+  margin: 0 auto
+  background-color: rgba(57, 73, 171, 0.8)
+  border-radius: 5px
+  opacity: 0.9
+  cursor: pointer
+  line-height: 38px
+  text-align: center
+  &:hover
+    transition: opacity 0.36s ease
+    opacity: 1
+  span
+    color: white
+    font-weight: 300
+    font-size: 12px
+  &.-hidden
+    display: none
+    overflow: hidden
+  +PHONE_ONLY
+    top: 3px
+    display: block
+    width: 100%
+    right: 0
+    left: 0
+    max-width: 200px
+    span
+      font-size: 9px
