--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -5,6 +5,8 @@ html( lang="pl")
     include _header.jade
     .googleMaps
       .googleMaps__API#googleMaps
+
+
     .panelWelcome.panel
       .panelWelcome__wrapper
         span.panelWelcome__buttonIconBG
@@ -24,7 +26,7 @@ html( lang="pl")
         .panelLogin__title Panel Logowania
         .panelLogin__alert.-info.-hidden
           i.fa.fa-info-circle
-          |Konto o takim emailu nie istnieje.
+          | Konto o takim emailu nie istnieje.
         .panelLogin__alert.-danger.-hidden
           i.fa.fa-info-circle
           | Hasło przypisane do tego emailu, jest nie poprawne.
@@ -89,6 +91,111 @@ html( lang="pl")
           span.panelResetPassword__icon.fa.fa-times
         .panelResetPassword__navigation Nie masz konta?
           a(href="#").panelResetPassword__ToRegister Zarejestruj się.
+
+
+    .panelAutobusy.panel.-hidden
+      .panelAutobusy__wrapper
+        .panelAutobusy__title Panel Zarządzania Autobusami
+        .panelAutobusy__subtitle Zarządzanie flotą autobusów.
+        .panelAutobusy__navigation
+          a(href="#").panelAutobusy__navigation__item Lista Autobusów
+          a(href="#").panelAutobusy__navigation__item Dodaj Autobus
+        .panelAutobusy__content
+          .panelAutobusy__content__Title Lista Autobusów
+          .panelAutobusy__content__Filtr
+            .panelAutobusy__content__Filtr__item
+              input(placeholder="Szukaj autobusu...")
+            .panelAutobusy__content__Filtr__item
+              input(placeholder="Filtr Stanów autobusu")
+            .panelAutobusy__content__Filtr__item
+              input(placeholder="Typ autobusu")
+            .panelAutobusy__content__Filtr__item
+              input(placeholder="Biletomat")
+          .panelAutobusy__contentList
+
+          .panelList
+            .panelList__header
+              .panelList__headeritemType Typ
+              .panelList__headeritemName Numer Autobusu
+              .panelList__headeritemStatus Status
+              .panelList__headeritemBiletomat Biletomat
+              .panelList__headeritemnavigation
+            .panelList__content
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 102
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 103
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 5
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 6
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 7
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 8
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 9
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 10
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+              .panelList__item
+                .panelList__itemType
+                  .fa.fa-bus
+                .panelList__itemName 11
+                .panelList__itemStatus Aktywny
+                .panelList__itemBiletomat
+                  .fa.fa-times-circle-o
+                .panelList__navigation Zobacz szczegóły
+
+        span.panelAutobusy__close
+          span.panelAutobusy__icon.fa.fa-times
 
 
 
