--- a/szablon/blocks/header/_header.sass
+++ b/szablon/blocks/header/_header.sass
@@ -33,6 +33,7 @@
     text-align: left
     transform: scale(1, 1)
     opacity: 1
+    overflow-y: scroll
     &.-hidden
       opacity: 0
       transform: scale(2, 2)
@@ -102,6 +103,7 @@
     text-align: left
     transform: scale(1, 1)
     opacity: 1
+    overflow-y: scroll
     &.-hidden
       opacity: 0
       transform: scale(2, 2)
@@ -147,7 +149,7 @@
   height: 38px
   top: 4px
   right: 50px
-  z-index: 103
+  z-index: 100
   margin: 0 auto
   background-color: rgba(57, 73, 171, 0.8)
   border-radius: 5px
