--- a/szablon/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/szablon/blocks/panelAutobusy/_panelAutobusy.sass
@@ -12,7 +12,7 @@
   z-index: 100
   opacity: 1
 
-  margin: 50px auto
+  margin: 50px auto 0
   background-color: rgba(255, 255, 255, 1)
   border: 1px solid rgba(255, 255, 255, 0.5)
   border-radius: 5px
@@ -28,6 +28,7 @@
     opacity: 0
     z-index: 0
     transform: scale(0.5, 0.5)
+    display: none
 
   &__wrapper
     position: relative
@@ -171,7 +172,7 @@
     justify-content: flex-start
     flex-direction: row
     +PHONE_ONLY
-      justify-content: space-between
+      justify-content: center
     &__item
       flex-basis: 50%
       flex-grow: 1
