--- a/szablon/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/szablon/blocks/panelAutobusy/_panelAutobusy.sass
@@ -2,8 +2,8 @@
 
 .panelAutobusy
   transition: transform 0.36s ease
-  position: absolute
-  max-width: 900px
+  position: relative
+  max-width: 960px
   width: 100%
   height: auto
   top: calc(50% - 307px)
