--- a/szablon/blocks/panelList/_panelList.sass
+++ b/szablon/blocks/panelList/_panelList.sass
@@ -7,8 +7,9 @@
     overflow: hidden
   &__content
     border: 1px solid #D2E3E9
-    height: 100%
-    max-height: 300px
+    //min-height: 200px
+    height: auto
+    //max-height: 500px
     overflow-y: scroll
   &__item
     width: 100%
