--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -123,8 +123,7 @@
 
     .remembermebox
       margin-top: 0
-      margin-bottom: 20px
-
+      margin-bottom: 0
     label
       margin-top: 5px
       display: inline-block
@@ -173,6 +172,7 @@
         transform: scale(1) rotate(-45deg)
 
     button
+      margin-top: 20px
       text-transform: uppercase
       background: #4AAED4
       color: white
