--- a/szablon/blocks/panelRegister/_panelRegister.sass
+++ b/szablon/blocks/panelRegister/_panelRegister.sass
@@ -35,13 +35,14 @@
     padding: 20px
   &__title
     font-family: Lato, sans-serif
-    font-weight: 300
+    font-weight: 500
     line-height: 26px
-    margin-bottom: 15px
+    margin: 30px auto
     font-size: 25.5px
     letter-spacing: 2px
     text-align: center
-    text-transform: uppercase
+    //text-transform: uppercase
+    color: #4AAED4
   &__text
     font-family: Lato, sans-serif
     font-weight: 700
@@ -53,6 +54,7 @@
     text-align: center
     color: #999
   &__alert
+    //max-width: 300px
     font-family: Lato, sans-serif
     font-weight: 400
     margin: 0 auto
@@ -61,52 +63,130 @@
     letter-spacing: 1.35px
     text-align: left
     color: #222
-    margin-bottom: 10px
+    margin-bottom: 20px
+    padding: 15px
+    border-radius: 5px
+    border-left: 5px solid
     i
       margin-right: 4px
     &.-info
-      color: darkred
+      color: #fff
+      background: #dd4b39
+      border-color: #c23321
     &.-danger
       color: firebrick
-    &.-success
-      color: forestgreen
-      font-size: 16px
-      font-weight: 300
-      text-align: center
-      margin-top: 30px
-      margin-bottom: 30px
     &.-hidden
       display: none
+    h3
+      margin-top: 0px
+      margin-bottom: 10px
   &__form
     padding: 5px
     margin: 0 auto
     text-align: center
+    i
+      font-size: 1.5em
+      line-height: 30px
+      position: absolute
+      z-index: 1
+      left: 0
+      right: 0
+      top: 0
+      bottom: 0
+      color: #7B7B7B
+      text-align: center
+      width: 30px
+
     input
+      background: transparent
+      box-shadow: none !important
+      outline: none
       font-weight: 400
       max-width: 300px
       width: 100%
       display: block
-      margin: 5px auto
-      padding: 8px 10px
+      margin: 0px auto
+      padding: 3px 10px
+      padding-left: 40px
       border-radius: 0
       border-top: 0
       border-left: 0
       border-right: 0
-      border-bottom: 1px solid blue
+      border-bottom: 2px solid #D2E3E9
       font-size: 16px
       &:focus
-        border-bottom: 1px solid deepskyblue
+        border-bottom: 2px solid #98D3EA
+      &:focus + i
+        color: #4AAED4
+
+    .remembermebox
+      margin-top: 0
+      margin-bottom: 20px
+
+    label
+      margin-top: 5px
+      display: inline-block
+      height: 30px
+      cursor: pointer
+
+      color: #9C969C
+      font-weight: 400
+      max-width: 300px
+      line-height: 30px
+      .icon
+        line-height: 30px
+        width: 17px
+        height: 18px
+        border-radius: 2px
+        position: relative
+        display: inline-block
+        border: 1px solid
+        top: 5px
+        &:before, &:after
+          content: ''
+          width: 10px
+          height: 2px
+          background: white
+          position: absolute
+          transition: all .2s ease-in-out 0s
+        &:before
+          left: 3px
+          width: 5px
+          bottom: 6px
+          transform: scale(0) rotate(0)
+        &:after
+          top: 6px
+          right: 0
+          transform: scale(0) rotate(0)
+
+    .check
+      display: none
+    .check:checked + label
+      color: #4AAED4
+      .icon
+        background: #4AAED4
+      .icon:before
+        transform: scale(1) rotate(45deg)
+      .icon:after
+        transform: scale(1) rotate(-45deg)
+
     button
       margin-top: 20px
-      @extend .btn
-      @extend .btn-primary
-      border-color: rgb(57, 73, 171)
-      padding: 10px 20px
-      background: rgb(57, 73, 171)
-      background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2976df
+      text-transform: uppercase
+      background: #4AAED4
+      color: white
+      border: none
+      padding: 15px 20px
+      border-radius: 25px
+      max-width: 300px
+      width: 100%
       &:hover
-        background: rgb(65, 82, 210)
-        background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2e8bff
+        background: #98D3EA
+
+  &__formwrapper
+    position: relative
+    max-width: 300px
+    margin: 0 auto
   &__navigation
     margin-top: 20px
   &__ToLogin
