--- a/szablon/blocks/panelRegister/_panelRegister.sass
+++ b/szablon/blocks/panelRegister/_panelRegister.sass
@@ -6,13 +6,13 @@
   max-width: 530px
   width: 100%
   height: auto
-  top: calc(50% - 158.5px)
+  top: calc(50% - 170px)
   right: 0
   left: 0
   z-index: 100
   opacity: 1
 
-  margin: 50px auto 0
+  margin: 0 auto
   background-color: rgba(255, 255, 255, 1)
   border: 1px solid rgba(255, 255, 255, 0.5)
   border-radius: 5px
@@ -24,6 +24,7 @@
   +PHONE_ONLY
     max-width: 100%
     position: relative
+    margin: 50px auto
   &.-hidden
     opacity: 0
     z-index: 0
