--- a/szablon/blocks/header/_header.sass
+++ b/szablon/blocks/header/_header.sass
@@ -33,7 +33,8 @@
     text-align: left
     transform: scale(1, 1)
     opacity: 1
-    overflow-y: scroll
+    +PHONE_ONLY
+      overflow-y: scroll
     &.-hidden
       opacity: 0
       transform: scale(2, 2)
@@ -103,7 +104,8 @@
     text-align: left
     transform: scale(1, 1)
     opacity: 1
-    overflow-y: scroll
+    +PHONE_ONLY
+      overflow-y: scroll
     &.-hidden
       opacity: 0
       transform: scale(2, 2)
