--- a/szablon/css/main.css
+++ b/szablon/css/main.css
@@ -5585,7 +5585,12 @@ a.tabnav-extra:hover {
       -ms-transform: scale(1, 1);
           transform: scale(1, 1);
   opacity: 1;
-  overflow-y: scroll;
+}
+
+@media (max-width: 767px) {
+  .header__switcher {
+    overflow-y: scroll;
+  }
 }
 
 .header__switcher.-hidden {
@@ -5680,7 +5685,12 @@ a.tabnav-extra:hover {
       -ms-transform: scale(1, 1);
           transform: scale(1, 1);
   opacity: 1;
-  overflow-y: scroll;
+}
+
+@media (max-width: 767px) {
+  .headerProfile__switcher {
+    overflow-y: scroll;
+  }
 }
 
 .headerProfile__switcher.-hidden {
@@ -6256,12 +6266,12 @@ a.tabnav-extra:hover {
   max-width: 530px;
   width: 100%;
   height: auto;
-  top: calc(50% - 158.5px);
+  top: calc(50% - 170px);
   right: 0;
   left: 0;
   z-index: 100;
   opacity: 1;
-  margin: 50px auto 0;
+  margin: 0 auto;
   background-color: white;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 5px;
@@ -6276,6 +6286,7 @@ a.tabnav-extra:hover {
   .panelRegister {
     max-width: 100%;
     position: relative;
+    margin: 50px auto;
   }
 }
 
