--- a/szablon/blocks/panelWelcome/_panelWelcome.sass
+++ b/szablon/blocks/panelWelcome/_panelWelcome.sass
@@ -12,7 +12,7 @@
   z-index: 100
   opacity: 1
 
-  margin: 50px auto 0
+  margin: 0 auto
   background-color: rgba(255, 255, 255, 1)
   border: 1px solid rgba(255, 255, 255, 0.5)
   border-radius: 5px
@@ -24,6 +24,7 @@
   +PHONE_ONLY
     position: relative
     max-width: 100%
+    margin: 50px auto
 
   &.-hidden
     opacity: 0
